--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "firebase": "^6.1.0",
     "react": "16.5.0",
     "react-native": "0.57.1",
     "react-native-elements": "^1.1.0",
-    "react-native-gesture-handler": "^1.2.2",
+    "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
