--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.5.0",
     "react-native": "0.57.1",
     "react-native-elements": "^1.1.0",
+    "react-native-firebase": "^5.4.2",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.0"
   },
