--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "autobind-decorator": "^2.4.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-lazyload-deux": "^2.0.4",
+    "react-native-local-notifications": "^2.0.0",
     "react-native-responsive-screen": "^1.2.2",
     "react-navigation": "^3.11.0"
   },
@@ -17,6 +21,7 @@
     "@babel/core": "^7.4.5",
     "@babel/runtime": "^7.4.5",
     "babel-jest": "^24.8.0",
+    "babel-preset-react-native": "^4.0.1",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-test-renderer": "16.8.3"
