--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autobind-decorator": "^2.4.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-lazyload-deux": "^2.0.4",
     "react-native-local-notifications": "^2.0.0",
