--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "autobind-decorator": "^2.4.0",
+    "dsteem": "^0.11.2",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-elements": "^1.1.0",
