--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "autobind-decorator": "^2.4.0",
     "dsteem": "^0.11.2",
+    "firebase": "^6.2.4",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-elements": "^1.1.0",
