--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "autobind-decorator": "^2.4.0",
     "dsteem": "^0.11.2",
     "firebase": "^6.2.4",
-    "react": "16.8.3",
+    "react": "16.8.4",
+    "react-dom": "16.8.4",
     "react-native": "0.59.8",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
