--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-native": "0.59.8",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-lazyload-deux": "^2.0.4",
