--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,12 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-vector-icons')
+    implementation project(':@react-native-firebase_storage')
+    implementation project(':react-native-firebase')
+    implementation project(':react-native-image-picker')
+    implementation project(':react-native-local-notifications')
+    implementation project(':react-native-fetch-blob')
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
