--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "react": "16.8.4",
     "react-dom": "16.8.4",
     "react-native": "0.59.8",
+    "react-native-camera-roll-picker": "^1.3.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.1.0",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-picker": "^1.0.2",
     "react-native-lazyload-deux": "^2.0.4",
     "react-native-local-notifications": "^2.0.0",
     "react-native-responsive-screen": "^1.2.2",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0"
   },
   "devDependencies": {
